src/test/deca/context/invalid/SansObjet/DeclVar-EQ-float-int-int.deca
// Description:
//    Declaration of a float variable using == operation between a int variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  17; 
    int y = 10; 
    float z = 17 == 10; 
}
